--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,10 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
         INITIAL_VERSION: 0.0.0
+        RELEASE_BRANCHES: master
+        TAG_CONTEXT: branch
+        PREFIX: master
         MAJOR: "'BREAKING CHANGE'|*#major*"
         MINOR: "*feat*|*#minor*"
         PATCH: "*fix*|*chore*|*docs*|*update*"
+        FORCE: true
