--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,11 @@ jobs:
       env:
         NEW_TAG: ${{ steps.tag.outputs.new_tag }}
         SEL_TAG: ${{ steps.tag.outputs.tag }}
+        PART: ${{ steps.tag.outputs.part }}
       run: |
         echo "tag with all includes"
         echo $NEW_TAG
         echo "only tag"
         echo $SEL_TAG
+        echo "part"
+        echo $PART
