--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,13 @@ jobs:
       uses: Magikon/github-tag-action@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        CUSTOM_TAG: 4.1.3
+        INITIAL_VERSION: 0.0.0
+        RELEASE_BRANCHES: master
+        TAG_CONTEXT: branch
+        MAJOR: "BREAKING*CHANGE|*#major*"
+        MINOR: "*feat*|*#minor*"
+        PATCH: "*fix*|*chore*|*docs*|*update*"
+        FORCE: true
         
     - name: Echo variables
       env:
